--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/slick.min.css">
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css?v=1">
     </head>
 
     <body>
@@ -491,7 +491,7 @@
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
         <script src="./assets/js/slick.min.js"></script>
-        <script src="./assets/js/custom.js"></script>
+        <script src="./assets/js/custom.js?v=1"></script>
     </body>
 
 </html>
